# graphlib

./: .gitignore  .travis.yml  Cargo.toml  README.md  benches-compare.sh  example1.dot  rust-toolchain.toml
.github/: FUNDING.yml
benches/: benchmark.rs
examples/: dot.rs  example1.dot
src/: dot.rs  edge.rs  graph.rs  lib.rs  macros.rs  vertex_id.rs
src/iterators/: bfs.rs  dfs.rs  dijkstra.rs  mod.rs  owning_iterator.rs  topo.rs  values.rs  vertices.rs
