[package]
name = "graphlib"
version = "0.6.1"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"
repository = "https://github.com/purpleprotocol/graphlib"
keywords = ["graph", "data-structures", "mutable", "graph-algorithm", "no-std"]
categories = ["data-structures", "no-std"]
description = "Graphlib is a simple and powerful rust library for the graph data-structure."
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "purpleprotocol/graphlib", branch = "master" }

[dependencies]
rand = { version = "0.7.2", default-features = false }
rand_core = "0.5.1"
rand_isaac = "0.2.0"
hex = "0.4.0"
hashbrown = { version = "0.6.3", features = ["rayon"] }
dot = {version = "0.1.4", optional=true}

[dev-dependencies]
criterion = "0.3.0"
# Due to criterion dependency on std
rand = "0.7.2"

[[bench]]
name = "benchmark"
harness = false

[features]

default = []
# use `cargo bench --features sbench` only if you want benchmarks with 10 million
# iterations (may fail on some systems)
sbench = []

# nightly feature for `no_std`
# for build use `cargo +nightly build --features no_std`
no_std = ["hashbrown/nightly"]

[package.metadata.docs.rs]
features = ["dot"]
no-default-features = true
