[package]
name = "graphlib"
version = "0.6.3"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2021"
repository = "https://github.com/purpleprotocol/graphlib"
keywords = ["graph", "data-structures", "mutable", "graph-algorithm", "no-std"]
categories = ["data-structures", "no-std"]
description = "Graphlib is a simple and powerful rust library for the graph data-structure."
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "purpleprotocol/graphlib", branch = "master" }

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.6.3", default-features = false, features = ["inline-more", "ahash"] }
dot = { version = "0.1.4", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.0"

[lib]
name = "graphlib"
path = "src/lib.rs"
crate-type = [
    "lib",
]

[[bench]]
name = "benchmark"
harness = false

[features]
# std needs to be a default feature or else you get the following error:
# ink! only supports compilation as `std` or `no_std` + `wasm32-unknown`"
default = ["hashbrown/nightly", "std"]
# use `cargo bench --features sbench` only if you want benchmarks with 10 million
# iterations (may fail on some systems)
sbench = []

std = []

[package.metadata.docs.rs]
features = ["dot"]
no-default-features = true
